@@ -6,6 +6,18 @@
 
 <web-app>
 
+<!-- order is very important here -->
+
+<servlet>
+  <servlet-name>Cached</servlet-name>
+  <servlet-class>org.apache.nutch.servlet.Cached</servlet-class>
+</servlet>
+
+<servlet-mapping>
+  <servlet-name>Cached</servlet-name>
+  <url-pattern>/servlet/cached</url-pattern>
+</servlet-mapping>
+
 <welcome-file-list>
   <welcome-file>search.html</welcome-file>
   <welcome-file>index.html</welcome-file>
